src/objects/Document_Type_Search_By_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <referenceTo>Document_Type__mdt</referenceTo>
        <relationshipLabel>Document Type Search By Fields</relationshipLabel>
        <relationshipName>Document_Type_Search_By_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_By_Field_Name__c</fullName>
        <label>Search By Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Search_By_Field_Name__c</fullName>
        <label>WS_Search By Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Document Type Search By Field</label>
    <pluralLabel>Document Type Search By Fields</pluralLabel>
</CustomObject>